--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
 </section>
 
 
+  <!-- BUTTONS -->
+<div class="modal-selector" id="modalSelector">
+
+  <button class="modal-btn" data-modal="modal1">
+    Referência
+  </button>
+
+  <button class="modal-btn" data-modal="modal2">
+    Estrelas
+  </button>
+
+  <button class="modal-btn" data-modal="modal3">
+    Estrelas + Texto
+  </button>
+
+  <button class="modal-btn" data-modal="modal4">
+    Seletor deslizante
+  </button>
+
+    <button class="modal-btn" data-modal="modal5">
+    Matriz
+  </button>
+
+</div>
+
   </main>
 
   <!-- Modal -->
@@ -233,7 +258,7 @@
     </section>
   </div>
 
-  <!-- SWITCH FIXO NO VIEWPORT -->
+  <!-- SWITCH FIXO NO VIEWPORT 
   <div class="incorporado-toggle">
     <p id="incorporadoLabel">não incorporado</p>
 
@@ -241,32 +266,7 @@
       <input type="checkbox" id="incorporadoSwitch">
       <span class="slider"></span>
     </label>
-  </div>
-
-  <!-- RADIUSBUTTONS -->
-<div class="modal-selector" id="modalSelector">
-
-  <button class="modal-btn" data-modal="modal1">
-    Referência
-  </button>
-
-  <button class="modal-btn" data-modal="modal2">
-    Estrelas
-  </button>
-
-  <button class="modal-btn" data-modal="modal3">
-    Estrelas + Texto
-  </button>
-
-  <button class="modal-btn" data-modal="modal4">
-    Seletor deslizante
-  </button>
-
-    <button class="modal-btn" data-modal="modal5">
-    Matriz
-  </button>
-
-</div>
+  </div> -->
 
 
 <!-- scripts -->
