modal id changes

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
   <!-- Modal -->
   <!-- MODAL 1 (modal principal) -->
-  <div class="modal-backdrop" id="modalBackdrop">
+  <div class="modal-backdrop" id="modal1">
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
@@ -191,7 +191,7 @@
   </div>
 
   <!-- MODAL 2 (estrela) -->
-  <div class="modal-backdrop" id="modalBackdrop2">
+  <div class="modal-backdrop" id="modal2">
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
@@ -208,7 +208,7 @@
   </div>
 
   <!-- MODAL 3 (estrela + texto) -->
-  <div class="modal-backdrop" id="modalBackdrop2">
+  <div class="modal-backdrop" id="modal3">
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
@@ -225,7 +225,7 @@
   </div>
 
 <!-- MODAL 4 (seletor deslizante) -->
-  <div class="modal-backdrop" id="modalBackdrop2">
+  <div class="modal-backdrop" id="modal4">
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
@@ -242,7 +242,7 @@
   </div>
 
   <!-- MODAL 5 (matriz) -->
-  <div class="modal-backdrop" id="modalBackdrop2">
+  <div class="modal-backdrop" id="modal5">
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
