--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
   <!-- BUTTONS -->
-<div class="modal-selector" id="modalSelector">
+<div class="modal-selector" id="modalSelector" style="top: 0px !important;">
 
   <button class="modal-btn" data-modal="modal1">
     Referência
