id modal5 change

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <section class="modal" role="dialog" aria-modal="true" style="height:100%">
 
       <div class="modal__topbar">
-        <button class="modal__close" id="closeModalBtn2" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal">
           &times;
         </button>
       </div>
