--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
-        <button class="modal__close" id="closeModalBtn" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal" data-close>
           &times;
         </button>
       </div>
@@ -195,7 +195,7 @@
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
-        <button class="modal__close" id="closeModalBtn2" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal" data-close>
           &times;
         </button>
       </div>
@@ -212,7 +212,7 @@
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
-        <button class="modal__close" id="closeModalBtn2" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal" data-close>
           &times;
         </button>
       </div>
@@ -229,7 +229,7 @@
     <section class="modal" role="dialog" aria-modal="true">
 
       <div class="modal__topbar">
-        <button class="modal__close" id="closeModalBtn2" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal" data-close>
           &times;
         </button>
       </div>
@@ -246,7 +246,7 @@
     <section class="modal" role="dialog" aria-modal="true" style="height:100%">
 
       <div class="modal__topbar">
-        <button class="modal__close" aria-label="Fechar modal">
+        <button class="modal__close" aria-label="Fechar modal" data-close>
           &times;
         </button>
       </div>
@@ -258,82 +258,45 @@
     </section>
   </div>
 
-  <!-- SWITCH FIXO NO VIEWPORT 
-  <div class="incorporado-toggle">
-    <p id="incorporadoLabel">não incorporado</p>
-
-    <label class="switch">
-      <input type="checkbox" id="incorporadoSwitch">
-      <span class="slider"></span>
-    </label>
-  </div> -->
-
-
-<!-- scripts -->
-<script>
-  const now = new Date();
-
-  const day = String(now.getDate()).padStart(2, "0");
-  const month = String(now.getMonth() + 1).padStart(2, "0");
-  const year = now.getFullYear();
-
-  const hours = String(now.getHours()).padStart(2, "0");
-  const minutes = String(now.getMinutes()).padStart(2, "0");
-
-  const formatted = `${day}/${month}/${year} ${hours}:${minutes}`;
-
-  console.log("Last refresh:", formatted);
-</script>
-
-<!-- script abertura modal novo-->
-<script>
+  <script>
+  // ===== SELECTORS =====
   const selector = document.getElementById("modalSelector");
-  const buttons = selector.querySelectorAll(".modal-btn");
+  const modalButtons = selector.querySelectorAll(".modal-btn");
   const modals = document.querySelectorAll(".modal-backdrop");
+  const closeButtons = document.querySelectorAll(".modal__close");
 
-  function closeAllModals() {
-    modals.forEach(m => m.classList.remove("show"));
-    selector.classList.remove("is-disabled");
-  }
-
-  buttons.forEach(btn => {
-    btn.addEventListener("click", () => {
-      const modalId = btn.dataset.modal;
-      closeAllModals();
-      document.getElementById(modalId).classList.add("show");
-      selector.classList.add("is-disabled");
-    });
-  });
-
-  document.querySelectorAll("[data-close]").forEach(btn => {
-    btn.addEventListener("click", closeAllModals);
-  });
-
-  modals.forEach(modal => {
-    modal.addEventListener("click", e => {
-      if (e.target === modal) closeAllModals();
-    });
-  });
-</script>
-
-<script>
-  const selector = document.getElementById("modalSelector");
-  const modals = document.querySelectorAll(".modal-backdrop");
-
+  // ===== FUNCTIONS =====
   function closeAllModals() {
     modals.forEach(modal => modal.classList.remove("show"));
     selector.classList.remove("is-disabled");
   }
 
-  /* ===== CLOSE BUTTONS (❌) ===== */
-  document.querySelectorAll("[data-close]").forEach(btn => {
+  function openModal(modalId) {
+    closeAllModals();
+    const modal = document.getElementById(modalId);
+    if (modal) {
+      modal.classList.add("show");
+      selector.classList.add("is-disabled");
+    }
+  }
+
+  // ===== OPEN MODALS ON BUTTON CLICK =====
+  modalButtons.forEach(btn => {
+    btn.addEventListener("click", () => {
+      const modalId = btn.dataset.modal;
+      openModal(modalId);
+    });
+  });
+
+  // ===== CLOSE MODALS ON ❌ BUTTON CLICK =====
+  closeButtons.forEach(btn => {
     btn.addEventListener("click", e => {
-      e.stopPropagation(); // 🔴 IMPORTANT
+      e.stopPropagation(); // prevent backdrop click from firing
       closeAllModals();
     });
   });
 
-  /* ===== BACKDROP CLICK ===== */
+  // ===== CLOSE MODALS ON BACKDROP CLICK =====
   modals.forEach(modal => {
     modal.addEventListener("click", e => {
       if (e.target === modal) {
@@ -341,63 +304,14 @@
       }
     });
   });
-</script>
 
-
-
-
-<!-- script modal abertura antigo <script>
-  const modal1 = document.getElementById("modalBackdrop");
-  const modal2 = document.getElementById("modalBackdrop2");
-
-  const openBtn = document.getElementById("openModalBtn");
-  const closeBtn1 = document.getElementById("closeModalBtn");
-  const closeBtn2 = document.getElementById("closeModalBtn2");
-
-  const switchInput = document.getElementById("incorporadoSwitch");
-  const switchLabel = document.getElementById("incorporadoLabel");
-
-  function showModal(modal) {
-    modal.classList.add("show");
-  }
-
-  function hideModal(modal) {
-    modal.classList.remove("show");
-  }
-
-  openBtn.addEventListener("click", () => {
-    showModal(modal1);
-  });
-
-  closeBtn1.addEventListener("click", () => {
-    hideModal(modal1);
-  });
-
-  modal1.addEventListener("click", (e) => {
-    if (e.target === modal1) hideModal(modal1);
-  });
-
-  closeBtn2.addEventListener("click", () => {
-    hideModal(modal2);
-  });
-
-  modal2.addEventListener("click", (e) => {
-    if (e.target === modal2) hideModal(modal2);
-  });
-
-  switchInput.addEventListener("change", () => {
-    if (switchInput.checked) {
-      switchLabel.textContent = "incorporado";
-      hideModal(modal1);
-      showModal(modal2);
-    } else {
-      switchLabel.textContent = "não incorporado";
-      hideModal(modal2);
-      showModal(modal1);
+  // ===== OPTIONAL: close with ESC key =====
+  document.addEventListener("keydown", e => {
+    if (e.key === "Escape") {
+      closeAllModals();
     }
   });
 </script>
--->
 
 </body>
 </html>
